--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -6,32 +6,129 @@
 @import "base/general";
 @import "../blocks/modules";
 
+$light-color: #fff;
+$accent-color: #65e496;
+
 body {
     font-family: 'Roboto Slab', serif;
+}
+
+.wrap {
+    max-width: 1170px;
+    margin: 0 auto;
 }
 
 .page-main {
     background-image: url("../img/main_bg.png");
     background-repeat: no-repeat;
     background-size: cover; 
+    color: $light-color;
+    padding-bottom: 157px;
 }
 
 .header {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    max-width: 1170px;
+    margin: 0 auto;
+    padding-top: 38px;
+    padding-bottom: 166px;
     &__logo {
         background-image: url("../img/logo.svg");
         display: block;
         width: 137px;
         height: 28px;
+        margin-top: -6px;
     }
     &-list {
         list-style: none;
         display: flex;
         justify-content: flex-end;
+        font-family: "Open Sans", sans-serif;
+        margin-top: 9px;
         &__item {
-            margin-left: 15px;
+            margin-left: 22px;
+            padding-bottom: 5px;
+            border-bottom: 3px solid transparent;
+            transition: 0.3s;
+            &:hover {
+                border-bottom: 3px solid $accent-color;
+            }
         }
+        &__item.active {
+            border-bottom: 3px solid $accent-color;
+        }
+        &__link {
+            color: $light-color;
+            text-decoration: none;
+            letter-spacing: 0.5px;
+        }
+    }
+}
+
+.block-text {
+    flex-basis: calc(100% - 500px);
+    &__name {
+        font-family: "Open Sans", sans-serif;
+        font-size: 18px;
+        letter-spacing: 0.7px;
+        margin-bottom: 23px;
+    }
+    &__title {
+        font-size: 48px;
+        font-weight: 700;
+        letter-spacing: 1.8px;
+        margin-bottom: 44px;
+        span {
+            display: block;
+            color: $accent-color;
+            font-size: 18px;
+            letter-spacing: 0.9px;
+            margin-top: 12px;
+        }
+    }
+    &__description {
+        font-family: "Open Sans", sans-serif;
+        font-size: 15px;
+        line-height: 24px;
+        letter-spacing: 0.7px;
+        margin-top: 18px;
+    }
+    &__btn {
+        display: block;
+        background-color: $accent-color;
+        color: $light-color;
+        font-size: 18px;
+        text-decoration: none;
+        max-width: 250px;
+        border-radius: 3px;
+        text-align: center;
+        font-size: 18px;
+        margin-top: 48px;
+        padding: 14px 0;
+        letter-spacing: 0.7px;
+        margin-top: 26px;
+        margin-bottom: 20px;
+    }
+}
+
+.block-book {
+    display: flex;
+    justify-content: space-between;
+    &-demo {
+        display: block;
+        width: 447px;
+        height: 643px;
+        background-image: url("../img/bookcover-large.svg");
+        background-repeat: no-repeat;
+        flex-basis: 500px;
+        margin-top: 13px;
+    }
+    small {
+        font-family: "Open Sans", sans-serif;
+        font-size: 12px;
+        font-style: italic;
+        letter-spacing: 0.4px;
     }
 }
