--- a/src/views/index.html
+++ b/src/views/index.html
@@ -23,7 +23,7 @@
         <link rel="apple-touch-icon" sizes="167x167" href="../img/favicons/apple-touch-icon-167x167.png">
         <link rel="apple-touch-icon" sizes="180x180" href="../img/favicons/apple-touch-icon-180x180.png">
         <link rel="apple-touch-icon" sizes="1024x1024" href="../img/favicons/apple-touch-icon-1024x1024.png">
-        <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i|Roboto+Slab:400,700&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i|Roboto+Slab:100,400,700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="../styles/main.css">
     </head>
     <body>
@@ -64,35 +64,32 @@
 
         <div class="page-author">
             <div class="wrap">
-                <div class="content">
-                    <div class="content-text">
-                        <p class="content-text__author">- Book Author</p>
-                        <h1 class="content-text__name">Emma Anderson</h1> 
-                        <p class="content-text__credo">A room without books is like a body without a soul</p>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                <div class="block-author">
+                    <div class="block-text">
+                        <p class="block-text__name block-text__name-top">- Book Author</p>
+                        <h1 class="block-text__title">Emma Anderson
+                        <span>A room without books is like a body without a soul</span></h1> 
+                        <p class="block-text__description block-text__description-author">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
                         Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
-                        <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
+                        <p class="block-text__description block-text__description-author">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
                         Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p> 
-                        <a href="" class="content-text__btn">Read full biography</a>
+                        <a href="" class="block-text__btn">Read full biography</a>
                     </div>
-                    <div class="content-picture">                    
+                    <div class="block-ava">
+                        <svg class="block-ava__svg" width="435" height="558">
+                            <linearGradient id="gradient" gradientUnits="userSpaceOnUse" x1="0" y1="0" x2="435" y2="558">
+                                <stop offset="0" style="stop-color: #446a87"/>
+                                <stop offset="1" style="stop-color: #59c2ae"/>
+                            </linearGradient>
+                            <rect width="435" height="558" x="0" y="0" fill="url(#gradient)"></rect>
+                        </svg> 
+                        <img class="block-ava__img" src="../img/avatar_1.png" alt="фото автора">                  
                     </div>
                 </div>
-            </div>
-            <div class="wrap">
-                <div class="research">
-                    <div class="research-item">
-                        <span class="research-item__number">12</span>
-                        <p class="research-item__meaning">Total published books</p>
-                    </div>
-                    <div class="research-item">
-                        <span class="research-item__number">5</span>
-                        <p class="research-item__meaning">Happy readers</p>                   
-                    </div>
-                    <div class="research-item">
-                        <span class="research-item__number">15,000</span>
-                        <p class="research-item__meaning">Happy readers</p>                    
-                    </div>
+                <div class="block-counter">                  
+                    <p><span>12</span>Total published books</p>
+                    <p><span>5</span>Happy readers</p>                   
+                    <p><span>15,000</span>Happy readers</p>                    
                 </div>
             </div>
         </div>
