--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -8,14 +8,44 @@
 
 $light-color: #fff;
 $accent-color: #65e496;
+$bg-light-color: #f5f6fa;
+$bg-dark-color: #44444f;
 
 body {
     font-family: 'Roboto Slab', serif;
+    font-size: 15px;
+    line-height: 24px;
+}
+
+h3 {
+    font-size: 24px;
+    letter-spacing: 1.2px;
 }
 
 .wrap {
     max-width: 1170px;
     margin: 0 auto;
+}
+
+.page {
+    padding-top: 161px;
+    padding-bottom: 160px;
+    &-gray {
+        background-color: $bg-light-color;
+    }
+    &__title {
+        font-size: 48px;
+        text-align: center;
+        margin-bottom: 25px;
+        letter-spacing: 2px;
+        color: #44444f;
+    }
+    &__subtitle {
+        font-size: 18px;
+        color: $accent-color;
+        text-align: center;
+        letter-spacing: 0.9px;
+    }
 }
 
 .page-main {
@@ -91,7 +121,7 @@ body {
             color: $accent-color;
             font-size: 18px;
             letter-spacing: 0.9px;
-            margin-top: 12px;
+            margin-top: 24px;
         }
     }
     &__description {
@@ -172,6 +202,7 @@ body {
     display: flex;
     justify-content: space-around;
     margin-top: 152px;
+    margin-bottom: 156px;
     p {
         font-family: "Open Sans", sans-serif;
         text-align: center;
@@ -183,8 +214,99 @@ body {
             font-weight: 100;
             font-size: 80px;
             color: $accent-color;
-            margin-bottom: 12px;
+            margin-bottom: 45px;
             
         }
     }
 }
+
+.block-about {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 82px;
+    h3 {
+        margin-bottom: 20px;
+    }
+    p {
+        font-family: "Open Sans", sans-serif; 
+        letter-spacing: 0.6px;
+    }
+    &-text {
+        flex-basis: 41%;
+        &__title {
+            color: #44444f;
+        }
+        &__article {
+            color: #696980;
+        }
+    }
+    &-table {
+        flex-basis: 49%;
+        &__title {
+            color: #44444f;
+        }
+        &__button {
+            color: #fff;
+            background-color: #65e496;
+            margin-top: 28px;
+            padding: 13px 43px;
+            border-radius: 3px;
+            box-shadow: 0 2px 0 rgba(101, 228, 125, 0.5);
+            border: none;
+            font-family: "Roboto Slab", serif;
+            font-size: 18px;
+        }
+        &__list {
+            margin: 25px 0 0 0;
+            padding: 0;
+            color: #696980;
+            counter-reset: list;
+            column-count: 2;
+            &>li {
+                position: relative;
+                padding-left: 36px;
+                counter-increment: list;
+                list-style-type: none;
+                margin-bottom: 8px;
+                letter-spacing: 0.7px;
+                &::before {
+                    content: counter(list) ". ";
+                }
+                &::after {
+                    content: "+";
+                    font-family: "Open Sans", sans-serif; 
+                    font-size: 15px;
+                    line-height: 22px;
+                    position: absolute;
+                    left: 0;
+                    top: 1px;
+                    background-color: $accent-color;
+                    color: $light-color;
+                    padding: 0px 7px;
+                }
+            }
+        }
+    }
+    &-link {
+        font-size: 18px;
+        color: #44444f;
+        font-weight: 700;
+        display: flex;
+        align-items: center;
+        &__title {
+            margin-right: 20px;
+        }
+        &__list {
+            list-style: none;
+            display: flex;
+            &-item {
+                margin-right: 12px;
+                img {
+                    width: 18px;
+                    height: 18px;
+                }
+            }
+        }
+    }
+}
+
