--- a/src/views/index.html
+++ b/src/views/index.html
@@ -95,45 +95,46 @@
         </div>
 
 
-        <div class="page-bookcontent">
-            <div class="wrap">
-                <div class="bookcontent-headline">
-                    <h1 class="bookcontent-headline__title">Book Contents</h1>
-                    <p class="bookcontent-headline__meaning">Let’s see what we have covered in the book</p>
-                </div>
-                <div class="bookcontent-main">
-                    <div class="bookcontent-about">
-                        <h2 class="bookcontent-about__title">About the book</h2>
-                        <p class="bookcontent-about__meaning">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna ali qua. Ut enim ad minim veniam, quis nostrud exercitation ull amco laboris nisi ut aliquip ex ea commodo consequat. 
-                            Duis aute irure dolor in reprehenderit in voluptate velit esse cillu m dolore eu fugiat nulla pariatur. 
-                            Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. 
-                            Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. 
-                            Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. 
-                            Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. </p>
-                        <span class="bookcontent-about__share">Featured in:</span>
-                        <ul class="bookcontent-about__link">
-                            <li class="bookcontent-about__link-item"></li>
-                            <li class="bookcontent-about__link-item"></li>
-                            <li class="bookcontent-about__link-item"></li>
-                        </ul>
+        <div class="page page-gray">
+            <div class="wrap">                
+                <h2 class="page__title">Book Contents</h2>
+                <p class="page__subtitle">Let’s see what we have covered in the book</p>
+                <div class="block-about">
+                    <div class="block-about-text">
+                        <h3 class="block-about-text__title">About the book</h3>
+                        <p class="block-about-text__article">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna ali qua. Ut enim ad minim veniam, quis nostrud exercitation ull amco laboris nisi ut aliquip ex ea commodo consequat. 
+                            Duis aute irure dolor in reprehenderit in voluptate velit esse cillu m dolore eu fugiat nulla pariatur.</p>
+                        <div class="block-about-link">
+                            <p class="block-about-link__title">Featured in:</p>
+                            <ul class="block-about-link__list">
+                                <li class="block-about-link__list-item">
+                                    <a href=""><img src="../img/stack-overflow.svg"></a>
+                                </li>
+                                <li class="block-about-link__list-item">
+                                    <a href=""><img src="../img/amazon.svg"></a>
+                                </li>
+                                <li class="block-about-link__list-item">
+                                    <a href=""><img src="../img/sass.svg"></a>
+                                </li>
+                            </ul>
+                        </div>
                     </div>
-                    <div class="bookcontent-content">
-                        <h2 class="bookcontent-content__title">Table of contents</h2>
-                        <ul class="bookcontent-content__chapters">
-                            <li class="bookcontent-content__item">1. Lorem ipsum dolor sit amet</li>
-                            <li class="bookcontent-content__item">2. Consectetur adipisicing elit</li>
-                            <li class="bookcontent-content__item">3. Labore et dolore magna</li>
-                            <li class="bookcontent-content__item">4. Consectetur adipisicing elit</li>
-                            <li class="bookcontent-content__item">5. Labore et dolore magna</li>
-                            <li class="bookcontent-content__item">6.  Lorem ipsum dolor sit amet</li>
-                            <li class="bookcontent-content__item">7. Consectetur adipisicing elit</li>
-                            <li class="bookcontent-content__item">8. Labore et dolore magna</li>
-                            <li class="bookcontent-content__item">9. Consectetur adipisicing elit</li>
-                            <li class="bookcontent-content__item">10. Labore et dolore magna</li>
-                        </ul>
-                        <a href="" class="bookcontent-content__btn">More</a>
+                    <div class="block-about-table">
+                        <h3 class="block-about-table__title">Table of contents</h3>
+                        <ol class="block-about-table__list">
+                            <li>Lorem ipsum dolor sit amet</li>
+                            <li>Consectetur adipisicing elit</li>
+                            <li>Labore et dolore magna</li>
+                            <li>Consectetur adipisicing elit</li>
+                            <li>Labore et dolore magna</li>
+                            <li>Lorem ipsum dolor sit amet</li>
+                            <li>Consectetur adipisicing elit</li>
+                            <li>Labore et dolore magna</li>
+                            <li>Consectetur adipisicing elit</li>
+                            <li>Labore et dolore magna</li>
+                        </ol>
+                        <button class="block-about-table__button">More</button>
                     </div>
-
                 </div>
             </div>
         </div>
