full_three_pages_PP

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -24,6 +24,7 @@
         <link rel="apple-touch-icon" sizes="180x180" href="../img/favicons/apple-touch-icon-180x180.png">
         <link rel="apple-touch-icon" sizes="1024x1024" href="../img/favicons/apple-touch-icon-1024x1024.png">
         <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i|Roboto+Slab:100,400,700&display=swap" rel="stylesheet">
+        <script src="https://kit.fontawesome.com/f6cb466394.js" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="../styles/main.css">
     </head>
     <body>
@@ -52,7 +53,7 @@
                         <h1 class="block-text__title">BUKEE: THE BOOK
                         <span>A room without books is like a body without a soul</span></h1>
                         <p class="block-text__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-                        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
                         <p class="block-text__description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
                         Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p> 
                         <a href="" class="block-text__btn">Buy this book - $15.00</a>
@@ -66,14 +67,14 @@
             <div class="wrap">
                 <div class="block-author">
                     <div class="block-text">
-                        <p class="block-text__name block-text__name-top">- Book Author</p>
-                        <h1 class="block-text__title">Emma Anderson
+                        <p class="block-text__name block-text__name-author">- Book Author</p>
+                        <h1 class="block-text__title block-text__title-author">Emma Anderson
                         <span>A room without books is like a body without a soul</span></h1> 
                         <p class="block-text__description block-text__description-author">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
                         Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
                         <p class="block-text__description block-text__description-author">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
                         Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p> 
-                        <a href="" class="block-text__btn">Read full biography</a>
+                        <a href="" class="block-text__btn block-text__btn-author">Read full biography</a>
                     </div>
                     <div class="block-ava">
                         <svg class="block-ava__svg" width="435" height="558">
@@ -88,7 +89,7 @@
                 </div>
                 <div class="block-counter">                  
                     <p><span>12</span>Total published books</p>
-                    <p><span>5</span>Happy readers</p>                   
+                    <p><span>5</span>Best selling books</p>                   
                     <p><span>15,000</span>Happy readers</p>                    
                 </div>
             </div>
@@ -108,13 +109,13 @@
                             <p class="block-about-link__title">Featured in:</p>
                             <ul class="block-about-link__list">
                                 <li class="block-about-link__list-item">
-                                    <a href=""><img src="../img/stack-overflow.svg"></a>
+                                    <a href=""><i class="fab fa-stack-overflow"></i></a>
                                 </li>
                                 <li class="block-about-link__list-item">
-                                    <a href=""><img src="../img/amazon.svg"></a>
+                                    <a href=""><i class="fab fa-amazon"></i></a>
                                 </li>
                                 <li class="block-about-link__list-item">
-                                    <a href=""><img src="../img/sass.svg"></a>
+                                    <a href=""><i class="fab fa-sass"></i></a>
                                 </li>
                             </ul>
                         </div>
