--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -36,7 +36,8 @@ h3 {
     &__title {
         font-size: 48px;
         text-align: center;
-        margin-bottom: 25px;
+        margin-bottom: 26px;
+        margin-top: 3px;
         letter-spacing: 2px;
         color: #44444f;
     }
@@ -77,10 +78,10 @@ h3 {
         display: flex;
         justify-content: flex-end;
         font-family: "Open Sans", sans-serif;
-        margin-top: 9px;
+        margin-top: 10px;
         &__item {
-            margin-left: 22px;
-            padding-bottom: 5px;
+            margin-left: 23px;
+            padding-bottom: 3px;
             border-bottom: 3px solid transparent;
             transition: 0.3s;
             &:hover {
@@ -93,7 +94,7 @@ h3 {
         &__link {
             color: $light-color;
             text-decoration: none;
-            letter-spacing: 0.5px;
+            letter-spacing: 1px;
         }
     }
 }
@@ -103,19 +104,20 @@ h3 {
     &__name {
         font-family: "Open Sans", sans-serif;
         font-size: 18px;
-        letter-spacing: 0.7px;
-        margin-bottom: 23px;
+        letter-spacing: 0.9px;
+        margin-top: 12px;
     }
-    &__name-top {
+    &__name-author {
         margin-top: 16px;
-        margin-left: 0;
+        margin-left: 1px;
         color: #696980;
     }
     &__title {
         font-size: 48px;
         font-weight: 700;
         letter-spacing: 1.8px;
-        margin-bottom: 44px;
+        margin-bottom: 39px;
+        margin-top: 44px;
         span {
             display: block;
             color: $accent-color;
@@ -124,18 +126,23 @@ h3 {
             margin-top: 24px;
         }
     }
+    &__title-author {
+        margin-bottom: 36px;
+        margin-top: 32px;
+    }
     &__description {
         font-family: "Open Sans", sans-serif;
         font-size: 15px;
         line-height: 24px;
         letter-spacing: 0.75px;
-        margin-top: 18px;
+        margin-top: 20px;
+        width: 88%;
     }
     &__description-author {
         color: #696980;
         font-size: 15px;
         padding-right: 70px;
-        padding-bottom: 20px;
+        padding-bottom: 4px;
     }
     &__btn {
         display: block;
@@ -148,10 +155,14 @@ h3 {
         text-align: center;
         font-size: 18px;
         margin-top: 48px;
-        padding: 14px 0;
+        padding: 13px 0;
         letter-spacing: 0.7px;
-        margin-top: 26px;
-        margin-bottom: 20px;
+        margin-top: 48px;
+        margin-bottom: 14px;
+    }
+    &__btn-author {
+        margin-top: 44px;
+        max-width: 238px;
     }
 }
 
@@ -171,7 +182,7 @@ h3 {
         font-family: "Open Sans", sans-serif;
         font-size: 12px;
         font-style: italic;
-        letter-spacing: 0.4px;
+        letter-spacing: 0.5px;
     }
 }
 
@@ -200,14 +211,17 @@ h3 {
 
 .block-counter {
     display: flex;
-    justify-content: space-around;
-    margin-top: 152px;
-    margin-bottom: 156px;
+    justify-content: space-between;
+    margin: 193px 62px 141px 83px;
     p {
         font-family: "Open Sans", sans-serif;
         text-align: center;
         font-size: 18px;
         color: #696980;
+        letter-spacing: 0.9px;
+        &:nth-child(2) {
+            margin-left: 19px;
+        }
         span {
             font-family: "Roboto Slab", serif;
             display: block;
@@ -215,7 +229,7 @@ h3 {
             font-size: 80px;
             color: $accent-color;
             margin-bottom: 45px;
-            
+            letter-spacing: 2.7px;   
         }
     }
 }
@@ -225,11 +239,13 @@ h3 {
     justify-content: space-between;
     margin-top: 82px;
     h3 {
-        margin-bottom: 20px;
+        margin-bottom: 18px;
+        margin-left: 2px;
     }
     p {
         font-family: "Open Sans", sans-serif; 
-        letter-spacing: 0.6px;
+        letter-spacing: 0.8px;
+        margin-bottom: 13px;
     }
     &-text {
         flex-basis: 41%;
@@ -249,12 +265,13 @@ h3 {
             color: #fff;
             background-color: #65e496;
             margin-top: 28px;
-            padding: 13px 43px;
+            padding: 13px 45px;
             border-radius: 3px;
             box-shadow: 0 2px 0 rgba(101, 228, 125, 0.5);
             border: none;
             font-family: "Roboto Slab", serif;
             font-size: 18px;
+            margin-left: 5px;
         }
         &__list {
             margin: 25px 0 0 0;
@@ -262,6 +279,7 @@ h3 {
             color: #696980;
             counter-reset: list;
             column-count: 2;
+            column-gap: 32px;
             &>li {
                 position: relative;
                 padding-left: 36px;
@@ -280,7 +298,7 @@ h3 {
                     position: absolute;
                     left: 0;
                     top: 1px;
-                    background-color: $accent-color;
+                    background-color: #5189a0;
                     color: $light-color;
                     padding: 0px 7px;
                 }
@@ -294,16 +312,18 @@ h3 {
         display: flex;
         align-items: center;
         &__title {
-            margin-right: 20px;
+            margin-right: 25px;
+            margin-left: 2px;
         }
         &__list {
             list-style: none;
             display: flex;
             &-item {
-                margin-right: 12px;
-                img {
-                    width: 18px;
-                    height: 18px;
+                margin-right: 17px;
+                margin-top: 5px;
+                &>a {
+                    font-size: 18px;
+                    color: $accent-color;
                 }
             }
         }
