--- a/src/views/index.html
+++ b/src/views/index.html
@@ -47,7 +47,12 @@
             </header>
             <div class="wrap">
                 <div class="block-book">
-                    <div class="block-book-demo"></div>
+                    <div class="block-book-demo">
+                        <h2 class="block-book-demo__title">Good book
+                            <span>Don’t judge a book by its cover</span>
+                        </h2>
+                        <p class="block-book-demo__author">- By Emma Anderson</p>
+                    </div>
                     <div class="block-text">
                         <p class="block-text__name">- By Emma Anderson</p>
                         <h1 class="block-text__title">BUKEE: THE BOOK
@@ -88,7 +93,7 @@
                     </div>
                 </div>
                 <div class="block-counter">                  
-                    <p><span>12</span>Total published books</p>
+                    <p><span>12</span>Total published books</p>                                                                                                                                                                                                                                                                    
                     <p><span>5</span>Best selling books</p>                   
                     <p><span>15,000</span>Happy readers</p>                    
                 </div>
@@ -137,6 +142,58 @@
                         <button class="block-about-table__button">More</button>
                     </div>
                 </div>
+            </div>
+        </div>
+
+        <div class="page page-books">
+            <div class="wrap">
+                <h2 class="page__title page__title-books">Other Books</h2>
+                <p class="page__subtitle page__subtitle-books">Some books you might be interested in</p>
+                <div class="block-morebooks">
+                    <div class="block-morebooks-example">
+                        <div class="block-book-demo block-book-demo-little">
+                            <h2 class="block-book-demo__title block-book-demo__title-little">Inception
+                                <span>Books are the best friends</span>
+                            </h2>
+                            <p class="block-book-demo__author block-book-demo__author-little">- By Emma Anderson</p>
+                        </div>
+                        <div class="block-morebooks-text">
+                            <h3 class="block-morebooks-text__title">Inception</h3>
+                            <p class="block-morebooks-text__desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                                sed do eiusmod tempor incididunt ut labore et dolore</p>
+                            <a href="" class="block-morebooks-text__more">read more</a>
+                        </div>
+                    </div>
+                    <div class="block-morebooks-example">
+                            <div class="block-book-demo block-book-demo-little">
+                                <h2 class="block-book-demo__title block-book-demo__title-little">Fight Club
+                                    <span>Books are the best friends</span>
+                                </h2>
+                                <p class="block-book-demo__author block-book-demo__author-little">- By Emma Anderson</p>
+                            </div>
+                            <div class="block-morebooks-text">
+                                <h3 class="block-morebooks-text__title">Fight Club</h3>
+                                <p class="block-morebooks-text__desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                                    sed do eiusmod tempor incididunt ut labore et dolore</p>
+                                <a href="" class="block-morebooks-text__more">read more</a>
+                            </div>
+                    </div>
+                    <div class="block-morebooks-example">
+                            <div class="block-book-demo block-book-demo-little">
+                                <h2 class="block-book-demo__title block-book-demo__title-little">Daredevils
+                                    <span>Books are the best friends</span>
+                                </h2>
+                                <p class="block-book-demo__author block-book-demo__author-little">- By Emma Anderson</p>
+                            </div>
+                            <div class="block-morebooks-text">
+                                <h3 class="block-morebooks-text__title">Daredevils</h3>
+                                <p class="block-morebooks-text__desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                                    sed do eiusmod tempor incididunt ut labore et dolore</p>
+                                <a href="" class="block-morebooks-text__more">read more</a>
+                            </div>
+                    </div>
+                </div>
+                <button class="page-books__btn">Browse all books</button>
             </div>
         </div>
 
