--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -76,7 +76,7 @@ h3 {
     justify-content: center;
     align-items: center;
     &__btn {
-        background-color: $accent-color;
+        background: linear-gradient(to top left, #65e49a, #65e4b2);
         color: $light-color;
         font-family: "Roboto Slab", serif;
         font-size: 18px; 
@@ -86,6 +86,19 @@ h3 {
         display: block;
         margin: 86px auto;
         letter-spacing: 0.8px;
+        position: relative;
+        &::before {
+            content: "";
+            display: block;
+            height: 20px;
+            width: 100%;
+            background-color: #b2f1be;
+            position: absolute;
+            z-index: -1;
+            bottom: -2px;
+            border-radius: 3px;
+            margin-left: -32px;
+        }
     }
 }
 
@@ -178,7 +191,7 @@ h3 {
     }
     &__btn {
         display: block;
-        background-color: $accent-color;
+        background: linear-gradient(to top left, #65e49a, #65e4b2);
         color: $light-color;
         font-size: 18px;
         text-decoration: none;
@@ -191,10 +204,23 @@ h3 {
         letter-spacing: 0.7px;
         margin-top: 48px;
         margin-bottom: 14px;
+        box-shadow: 0 2px 0 rgba(101, 228, 125, 0.5);
     }
     &__btn-author {
         margin-top: 44px;
         max-width: 238px;
+        position: relative;
+        &::before {
+            content: "";
+            display: block;
+            height: 20px;
+            width: 100%;
+            background-color: #b2f1be; 
+            position: absolute;
+            z-index: -1;
+            bottom: -2px;
+            border-radius: 3px;
+        }
     }
 }
 
@@ -345,7 +371,7 @@ h3 {
         }
         &__button {
             color: #fff;
-            background-color: #65e496;
+            background: linear-gradient(to top left, #65e49a, #65e4b2);
             margin-top: 28px;
             padding: 13px 45px;
             border-radius: 3px;
@@ -354,6 +380,7 @@ h3 {
             font-family: "Roboto Slab", serif;
             font-size: 18px;
             margin-left: 17px;
+            position: relative;
         }
         &__list {
             margin: 25px 0 0 14px;
