--- a/src/views/index.html
+++ b/src/views/index.html
@@ -197,6 +197,46 @@
             </div>
         </div>
 
+        <div class="page">
+            <div class="wrap">
+                <div class="block-author">
+                    <div class="block-ava">
+                        <svg class="block-ava__svg block-ava__svg--left" width="435" height="704">
+                            <linearGradient id="gradient" gradientUnits="userSpaceOnUse" x1="0" y1="0" x2="435" y2="704">
+                                <stop offset="0" style="stop-color: #446a87"/>
+                                <stop offset="1" style="stop-color: #59c2ae"/>
+                            </linearGradient>
+                            <rect width="435" height="704" x="0" y="0" fill="url(#gradient)"></rect>
+                        </svg> 
+                        <img class="block-ava__img block-ava__img--left" src="../img/avatar_2.png" alt="фото автора">                  
+                    </div>
+                    <div class="block-text block-text--width">
+                        <p class="block-text__name block-text__name-events">- Emma Anderson</p>
+                        <h1 class="block-text__title block-text__title-events">Upcoming Events
+                        <span>Some upcoming events you might be interested in</span></h1> 
+                        <div class="block-text-item">
+                            <p class="block-text-item__date">November 21, 2018</p>
+                            <h4 class="block-text-item__title">Book signing - San francisco, CA</h4>
+                            <p class="block-text-item__desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                                Quis ipsum suspen disse ultrices gravida. 
+                                Risus commodo viverra maecenas accumsan lacus vel facilisis. </p> 
+                            <a href="" class="block-text-item__btn">Register</a>
+                        </div>
+                        <div class="block-text-item">
+                            <p class="block-text-item__date">November 21, 2018</p>
+                            <h4 class="block-text-item__title">Book reading - Los Angeles, CA</h4>
+                            <p class="block-text-item__desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                                Quis ipsum suspen disse ultrices gravida. 
+                                Risus commodo viverra maecenas accumsan lacus vel facilisis. </p> 
+                            <a href="" class="block-text-item__btn">Register</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
         <script src="../js/main.js"></script>
     </body>
 </html>
