--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -55,26 +55,6 @@ h3 {
         margin-bottom: 26px;
         margin-top: 3px;
     }
-}
-
-.page-main {
-    background-image: url("../img/main_bg.png");
-    background-repeat: no-repeat;
-    background-size: cover; 
-    color: $light-color;
-    padding-bottom: 157px;
-}
-
-
-.page-author {
-    padding-top: 161px;
-}
-
-.page-books {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
     &__btn {
         background: linear-gradient(to top left, #65e49a, #65e4b2);
         color: $light-color;
@@ -86,20 +66,32 @@ h3 {
         display: block;
         margin: 86px auto;
         letter-spacing: 0.8px;
-        position: relative;
-        &::before {
-            content: "";
-            display: block;
-            height: 20px;
-            width: 100%;
-            background-color: #b2f1be;
-            position: absolute;
-            z-index: -1;
-            bottom: -2px;
-            border-radius: 3px;
-            margin-left: -32px;
-        }
+        box-shadow: 0 2px 0 rgba(101, 228, 125, 0.5);
     }
+}
+
+.page-main {
+    background-image: url("../img/main_bg.png");
+    background-repeat: no-repeat;
+    background-size: cover; 
+    color: $light-color;
+    padding-bottom: 157px;
+}
+
+.page-author {
+    padding-top: 161px;
+}
+
+.page-books {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.page-blog {
+    background-color: $bg-light-color;
+    margin-top: -98px;
 }
 
 .header {
@@ -154,6 +146,7 @@ h3 {
         font-size: 18px;
         letter-spacing: 0.9px;
         margin-top: 12px;
+        color: #696980;
     }
     &__name-events {
         margin-top: -5px;
@@ -170,6 +163,7 @@ h3 {
         letter-spacing: 1.8px;
         margin-bottom: 39px;
         margin-top: 44px;
+        color: #44444f;
         span {
             display: block;
             color: $accent-color;
@@ -195,6 +189,7 @@ h3 {
         letter-spacing: 0.75px;
         margin-top: 20px;
         width: 88%;
+        color: #696980;
     }
     &__description-author {
         color: #696980;
@@ -222,21 +217,10 @@ h3 {
     &__btn-author {
         margin-top: 44px;
         max-width: 238px;
-        position: relative;
-        &::before {
-            content: "";
-            display: block;
-            height: 20px;
-            width: 100%;
-            background-color: #b2f1be; 
-            position: absolute;
-            z-index: -1;
-            bottom: -2px;
-            border-radius: 3px;
-        }
     }
     &-item {
         margin-bottom: 57px;
+        color: #696980;
         &__date {
             font-size: 15px;
             font-family: "Open Sans", sans-serif;
@@ -247,6 +231,8 @@ h3 {
             font-size: 18px;
             letter-spacing: 0.9px;
             margin-bottom: 16px;
+            color: #44444f;
+            font-weight: 700;
         }
         &__desc {
             font-size: 15px;
@@ -437,7 +423,6 @@ h3 {
             font-family: "Roboto Slab", serif;
             font-size: 18px;
             margin-left: 17px;
-            position: relative;
         }
         &__list {
             margin: 25px 0 0 14px;
@@ -520,11 +505,13 @@ h3 {
             font-family: "Roboto Slab", serif;
             font-size: 24px;
             font-weight: 700;
+            color: #44444f;
         }
         &__desc {
             text-align: center;
             letter-spacing: 0.8px;
             margin-top: 17px;
+            color: #696980;
 
         }
         &__more {
@@ -534,5 +521,62 @@ h3 {
             font-weight: 700;
             letter-spacing: 1px;
         }
+    }
+}
+
+.block-blog {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 83px;
+    h4 {
+        font-size: 18px;
+        color: #44444f;
+        margin-top: 16px;
+        letter-spacing: 0.9px;
+        font-weight: 700;
+    }
+    &-img {
+        width: 369px;
+        height: 224px;
+        overflow: hidden;
+        position: relative;
+        img {
+            width: 369px;
+            height: 224px;
+            position: absolute;
+            left: 50%;
+            top: 50%;
+            transform: translate(-50%, -50%);
+            object-fit: cover;
+        }
+    }
+    &-item {
+        margin-right: 31px;
+    }
+    &-info {
+        font-size: 15px;
+        color: #80809b;
+        display: flex;
+        justify-content: flex-start;
+        align-items: center;
+        margin-top: -12px;
+        letter-spacing: 0.75px;
+        a {
+            color: $accent-color;
+            text-decoration: none;
+        }
+    }
+    &__desc {
+        font-size: 15px;
+        font-family: "Open Sans", sans-serif;
+        color: #696980;
+        margin-top: -3px;
+        letter-spacing: 0.7px;
+    }
+    & + .page__btn--blog {
+        display: block;
+        margin: 69px auto;
+        padding: 14px 28px;
+        max-width: 265px;
     }
 }
