--- a/src/views/index.html
+++ b/src/views/index.html
@@ -193,7 +193,7 @@
                             </div>
                     </div>
                 </div>
-                <button class="page-books__btn">Browse all books</button>
+                <button class="page__btn">Browse all books</button>
             </div>
         </div>
 
@@ -234,6 +234,43 @@
                         </div>
                     </div>
                 </div>
+            </div>
+        </div>
+
+        <div class="page page-blog">
+            <div class="wrap">
+                <h2 class="page__title">Latest from Blog</h2>
+                <p class="page__subtitle">Some of the latest posts from my personal blog</p>
+                <div class="block-blog">
+                    <div class="block-blog-item">
+                        <div class="block-blog-img"><img src="../img/blog_1.jpg" alt=""></div>
+                        <h4>Importance of light in photography</h4>
+                        <div class="block-blog-info">
+                            <p>By <a href="">Emma Anderson </a></p><span> - </span><a href="">June 20, 2018</a>
+                        </div>
+                        <p class="block-blog__desc">Lorem ipsum dolor sit amet, conse ctetur adipi scing elit, sed do eius mod tempor incididunt ut labore et dolore magna aliqua. 
+                            Quis ipsum suspendisse ultrices gravida. Risus commodo</p>
+                    </div>
+                    <div class="block-blog-item">
+                        <div class="block-blog-img"><img src="../img/blog_2.jpg" alt=""></div>
+                        <h4>The tools you need for the perfection</h4>
+                        <div class="block-blog-info">
+                            <p>By <a href="">Emma Anderson </a></p><span> - </span><a href="">June 25, 2018</a>
+                        </div>
+                        <p class="block-blog__desc">Lorem ipsum dolor sit amet, conse ctetur adipi scing elit, sed do eius mod tempor incididunt ut labore et dolore magna aliqua. 
+                            Quis ipsum suspendisse ultrices gravida. Risus commodo</p>
+                    </div>
+                    <div class="block-blog-item">
+                        <div class="block-blog-img"><img src="../img/blog_3.jpg" alt=""></div>
+                        <h4>Knowing the difference is important</h4>
+                        <div class="block-blog-info">
+                            <p>By <a href="">Emma Anderson </a></p><span> - </span><a href="">August 22, 2018</a>
+                        </div>
+                        <p class="block-blog__desc">Lorem ipsum dolor sit amet, conse ctetur adipi scing elit, sed do eius mod tempor incididunt ut labore et dolore magna aliqua. 
+                            Quis ipsum suspendisse ultrices gravida. Risus commodo</p>
+                    </div>
+                </div>
+                <button class="page__btn page__btn--blog">Read more in the blog</button>
             </div>
         </div>
 
