--- a/src/views/index.html
+++ b/src/views/index.html
@@ -237,7 +237,7 @@
             </div>
         </div>
 
-        <div class="page page-blog">
+        <div class="page-blog">
             <div class="wrap">
                 <h2 class="page__title">Latest from Blog</h2>
                 <p class="page__subtitle">Some of the latest posts from my personal blog</p>
@@ -271,6 +271,22 @@
                     </div>
                 </div>
                 <button class="page__btn page__btn--blog">Read more in the blog</button>
+            </div>
+        </div>
+
+        <div class="page page-letter">
+            <div class="wrap">
+                <div class="block-letter">
+                    <div class="block-letter-item">
+                        <h2 class="block-letter__title">Join Newsletter</h2>
+                        <p class="block-letter__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspen disse ultrices gravida. 
+                            Risus commodo viverra maecenas accumsan lacus vel facilisis. </p>
+                    </div>
+                    <div class="block-letter-item">
+                        <input class="block-letter__input" type="text" name="" placeholder="Enter your email">
+                        <button class="block-letter__btn">Subscribe</button>
+                    </div>
+                </div>
             </div>
         </div>
 
