--- a/src/views/index.html
+++ b/src/views/index.html
@@ -290,6 +290,44 @@
             </div>
         </div>
 
+        <div class="footer">
+            <div class="wrap">
+                <div class="block-footer">
+                    <div>
+                        <a href="" class="block-footer__logo"></a>
+                        <p class="block-footer__desc">Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                        <p class="block-footer__desc">© 2018 Bukee Private Limited.</p>
+                    </div>
+                    <div>
+                        <h2 class="block-footer__title">Useful Links</h2>
+                        <ul class="block-footer__list block-footer__list--links">
+                            <li>About Bukee</li>
+                            <li>Explore Our Ecosystem</li>
+                            <li>Monthly Community Meetup</li>
+                            <li>Privacy Policy</li>
+                        </ul>
+                    </div>
+                    <div>
+                        <h2 class="block-footer__title block-footer__title--contacts">Our Contacts</h2>
+                        <ul class="block-footer__list block-footer__list--contacts">
+                            <li>Amphitheatre Parkway, CA, 94043</li>
+                            <li>Call us on: +4455663322</li>
+                            <li>Email: support@bukee.mail</li>
+                        </ul>
+                        <ul class="block-footer__social">
+                            <li><a href=""><i class="fab fa-facebook-f"></i></a></li>
+                            <li><a href=""><i class="fab fa-twitter"></i></a></li>
+                            <li><a href=""><i class="fab fa-twitch"></i></a></li>
+                            <li><a href=""><i class="fab fa-youtube"></i></a></li>
+                            <li><a href=""><i class="fab fa-slack-hash"></i></a></li>
+                            <li><a href=""><i class="fab fa-whatsapp"></i></a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+
         <script src="../js/main.js"></script>
     </body>
 </html>
