--- a/src/views/index.html
+++ b/src/views/index.html
@@ -198,7 +198,7 @@
             </div>
         </div>
 
-        <div class="page">
+        <div class="page page-carousel">
             <div class="wrap">
                 <div class="block-carousel">
                     <div>
@@ -239,9 +239,10 @@
                     </div>
                 </div>
             </div>
+            <svg class="page__svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1600 849"><path fill="#44444f" d="M-1 0l802 61 799-61v789l-799 60-802-60V0z"/></svg>
         </div>
 
-        <div class="page">
+        <div class="page page-events">
             <div class="wrap">
                 <div class="block-author">
                     <div class="block-ava">
