--- a/src/views/index.html
+++ b/src/views/index.html
@@ -3,26 +3,8 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>gulp-scss-starter</title>
-        <meta name="theme-color" content="#fff">
-        <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+        <title>Bukee</title>
         <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-        <link rel="shortcut icon" href="../img/favicons/favicon.ico" type="image/x-icon">
-        <link rel="icon" sizes="16x16" href="../img/favicons/favicon-16x16.png" type="image/png">
-        <link rel="icon" sizes="32x32" href="../img/favicons/favicon-32x32.png" type="image/png">
-        <link rel="apple-touch-icon-precomposed" href="../img/favicons/apple-touch-icon-precomposed.png">
-        <link rel="apple-touch-icon" href="../img/favicons/apple-touch-icon.png">
-        <link rel="apple-touch-icon" sizes="57x57" href="../img/favicons/apple-touch-icon-57x57.png">
-        <link rel="apple-touch-icon" sizes="60x60" href="../img/favicons/apple-touch-icon-60x60.png">
-        <link rel="apple-touch-icon" sizes="72x72" href="../img/favicons/apple-touch-icon-72x72.png">
-        <link rel="apple-touch-icon" sizes="76x76" href="../img/favicons/apple-touch-icon-76x76.png">
-        <link rel="apple-touch-icon" sizes="114x114" href="../img/favicons/apple-touch-icon-114x114.png">
-        <link rel="apple-touch-icon" sizes="120x120" href="../img/favicons/apple-touch-icon-120x120.png">
-        <link rel="apple-touch-icon" sizes="144x144" href="../img/favicons/apple-touch-icon-144x144.png">
-        <link rel="apple-touch-icon" sizes="152x152" href="../img/favicons/apple-touch-icon-152x152.png">
-        <link rel="apple-touch-icon" sizes="167x167" href="../img/favicons/apple-touch-icon-167x167.png">
-        <link rel="apple-touch-icon" sizes="180x180" href="../img/favicons/apple-touch-icon-180x180.png">
-        <link rel="apple-touch-icon" sizes="1024x1024" href="../img/favicons/apple-touch-icon-1024x1024.png">
         <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i|Roboto+Slab:100,400,700&display=swap" rel="stylesheet">
         <script src="https://kit.fontawesome.com/f6cb466394.js" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="../styles/main.css">
@@ -33,6 +15,10 @@
             <header>        
                 <div class="header">
                     <a href="" class="header__logo"></a>
+                    <input type="checkbox" id="chk">
+                    <label for="chk" class="show-menu-btn">
+                        <img src="../img/menu.svg">
+                    </label>
                     <ul class="header-list">
                         <li class="header-list__item active"><a href="" class="header-list__link">Home</a></li>
                         <li class="header-list__item"><a href="" class="header-list__link">About</a></li>
@@ -43,6 +29,9 @@
                         <li class="header-list__item"><a href="" class="header-list__link">Portfolio</a></li>
                         <li class="header-list__item"><a href="" class="header-list__link">Clients</a></li>
                         <li class="header-list__item"><a href="" class="header-list__link">Contact</a></li>
+                        <label for="chk" class="hide-menu-btn">
+                            <img src="../img/close.svg">
+                        </label>
                     </ul>
                 </div>
             </header>
